criaçao dos models: surveys, subjects e surverysstudents

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=8000
 PRODUCTION=false
 
 #Mongo Config
-# 172.19.0.2
-MONGO_HOST=localhost
+# 
+MONGO_HOST=172.19.0.2
 MONGO_PORT=27017
 MONGO_DB_NAME=atividade02PDM
