--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.12.2",
-    "nodemailer": "^6.5.0"
+    "nodemailer": "^6.5.0",
+    "uuidv4": "^6.2.7"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
