implementando email service

--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@ PRODUCTION=false
 
 #Mongo Config
 # 
-MONGO_HOST=172.19.0.2
+MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DB_NAME=atividade02PDM
+
+MAILER_HOST=smtp.ethereal.email
+MAILER_PORT=587
+MAILER_AUTH_USER=heath.monahan19@ethereal.email
+MAILER_AUTH_PASS=juKkAEjHxvShhdQSJC
