--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "mongoose": "^5.12.2",
     "nodemailer": "^6.5.0",
     "uuidv4": "^6.2.7"
