corrigindo alguns ultimos problemas

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=8000
 
 PRODUCTION=false
 
-PROJECT_URL=http://localhost:8000
+PROJECT_URL=http://localhost:8000/api/v1
 
 #Mongo Config
 # 
@@ -12,5 +12,5 @@ MONGO_DB_NAME=atividade02PDM
 
 MAILER_HOST=smtp.ethereal.email
 MAILER_PORT=587
-MAILER_AUTH_USER=heath.monahan19@ethereal.email
-MAILER_AUTH_PASS=juKkAEjHxvShhdQSJC
+MAILER_AUTH_USER=hank.jacobson9@ethereal.email
+MAILER_AUTH_PASS=U6TeSAA9UQ7esPYMVj
