--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "dev": "nodemon ./src/server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
+    "json-web-token": "^3.2.0",
     "mongoose": "^5.12.2",
     "nodemailer": "^6.5.0",
     "uuidv4": "^6.2.7"
