Adicionando cors ao projeto e colocando chave para o jwt no .env

--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ MAILER_HOST=smtp.ethereal.email
 MAILER_PORT=587
 MAILER_AUTH_USER=hank.jacobson9@ethereal.email
 MAILER_AUTH_PASS=U6TeSAA9UQ7esPYMVj
+
+JWT_KEY=atividadedac
